// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Played X 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
</Text>
`;

exports[`Played X with 2 others 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  2 others
</Text>
`;

exports[`Played X with Y 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
</Text>
`;

exports[`Played X with Y and Z 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
</Text>
`;

exports[`Played X with Y and one other 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  one other
</Text>
`;

exports[`Played X with Y and two others 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  2 others
</Text>
`;

exports[`Played X with Y, Z and W 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
  , 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
</Text>
`;

exports[`Played X with Y, Z and one other 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
  , 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  one other
</Text>
`;

exports[`Played X with Y, Z and two others 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
  , 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Nina
  </Text>
   and 
  2 others
</Text>
`;

exports[`Played X with one other 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#1c1a13",
        "fontFamily": "nunito-regular",
        "fontSize": 15,
      },
    ]
  }
>
  Played 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "color": "#314bfc",
          "fontFamily": "nunito-bold",
          "fontSize": 15,
        },
      ]
    }
  >
    Clans of Caledonia
  </Text>
   with 
  one other
</Text>
`;
